# bank-data-processor

./: .coverage  .encryption_key  .encryption_key_test  Makefile  README.md  pyproject.toml
config/: config.toml
data/input/: transactions_test.csv
data/input_test/: recovery_test.csv
data/output/: transactions_valides.xlsx  transactions_valides_nettoyees.csv
data/quarantine/: invalid_transactions_transactions_test.csv
src/: api.py  categorization.py  dashboard.py  data_processor.py  fraud_detection.py  notifications.py  reporting.py  utils.py  validation.py
tests/: test_data_processor.py
